--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/lottery-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HM抽奖系统</title>
+    <title>LuckyGo</title>
     <style>
       #app {
         width: 100%;
